<resources>
    <string name="app_name">Emergram</string>
    <string name="splash">Splash</string>
    <string name="content_description">image</string>
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email_id">Email ID</string>
    <string name="et_hint_email_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password</string>
    <string name="btn_1b1_login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="register"><u>Register</u></string>

    <string name="create_an_account">CREATE AN ACCOUNT</string>

    <string name="hint_last_name">Last name</string>
    <string name="hint_first_name">First name</string>
    <string name="et_hint_password">Password</string>
    <string name="et_hint_confirm_password">Confirm password</string>

    <string name="i_agree_to_the_terms_and_condition">I Agree To The <u>Terms &amp; Condition</u></string>
    <string name="btn_lbl_register">Register</string>

    <string name="already_have_an_account">Already have an account</string>
    <string name="login"><u>Login</u></string>

    <string name="err_msg_enter_first_name">Please enter first name</string>
    <string name="err_msg_enter_last_name">Please enter last name</string>
    <string name="err_msg_enter_email">Please enter email</string>
    <string name="err_msg_enter_password">Please enter password</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm password</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password mismatch</string>
    <string name="err_msg_agree_terms_and_condition">Please agree terms and conditions</string>

    <string name="please_wait">Please Wait&#8230;</string>

    <string name="title_forgot_password">FORGOT PASSWORD?</string>
    <string name="forgot_password_title_description">Enter your Email address or Email ID, we\'ll send you an email to reset your password ;)</string>
    <string name="btn_lbl_submit">Submit</string>

    <string name="email_sent_success">\"Email sent successfully to reset your password! \"</string>
    <string name="register_success">You are registered successfully</string>

    <string name="title_complete_profile">COMPLETE PROFILE        </string>
    <string name="et_hint_mobile_number">Mobile Number</string>
    <string name="rb_lbl_male">MALE</string>
    <string name="rb_lbl_female">FEMALE</string>
    <string name="btn_lbl_save">SAVE</string>

    <string name="read_storage_permission_denied">Oops, you just denied the permission for storage. You can also allow it from settings</string>
    <string name="image_selection_failed">Image selection failed</string>
    <string name="err_msg_enter_mobile_number">Please enter mobile number.</string>

    <string name="msg_profile_update_success">Your profile is updated successfully</string>
    <string name="title_activity_gmaps">GmapsActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>

    <string name="title_contacts">Contacts</string>
    <string name="title_maps">Map</string>
    <string name="title_Profile">Profile</string>
    <string name="contacts">Contacts</string>
    <string name="map">Map</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_place">Search Place</string>
    <string name="API_KEY">AIzaSyBL14MnUuBo45WyGbp3ZmtU8CtqrGaAOD0</string>
    <string name="terrain">Terrain</string>
    <string name="satellite">Satellite</string>
    <string name="map_default">Default</string>

</resources>